task-12-13/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: fullstack-app
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - xbaxromov.nvrbckdown.uz
    secretName: xbaxromov-tls 
  rules:
  - host: xbaxromov.nvrbckdown.uz
    http:
      paths:
      - backend:
          service:
            name: react-app
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: flask-app
            port:
              number: 80
        path: /config
        pathType: Exact
status:
  loadBalancer: {}
